--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
+    "portal-vue": "^2.1.7",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.4",
